# ESA-NASA-Workshop-2026

./: .gitignore  README.md  setup.sh
Day 2/Track 1/EVE-Platform-Tour/: Agentic_EVE.ipynb  README.md  requirements.txt  setup.sh
Day 2/Track 2/Earth-Embeddings-EO/: README.md  changetx_adapter.py  notebook_0_eurosat_embeddings_tsne.ipynb  notebook_1_prithvi_patch_similarity.ipynb  notebook_3_text_to_image_search.ipynb  (+7 more)
Day 2/Track 3/Operational-GeoAI-Model-Serving/Part2/3_terratorch-flip-processor/: LICENSE  README.md  inference.ipynb  pyproject.toml
Day 2/Track 3/Operational-GeoAI-Model-Serving/Part2/3_terratorch-flip-processor/terratorch_flip_processor/: types.py
Day 4/Track 1/GeoAI-Agent-Tutorial/: .env.example  README.md  chat.ipynb  claudecode.sh  geo_agent.ipynb  geoai_agent_tutorial.ipynb  mcp_server.py  opencode.json  opencode.sh  pyproject.toml  setup.sh
Day 4/Track 1/GeoAI-Agent-Tutorial/.agents/skills/prithvi-workshop-care/: SKILL.md
Day 4/Track 1/GeoAI-Agent-Tutorial/.agents/skills/prithvi-workshop-care/references/: output.md  scope.md
Day 4/Track 1/GeoAI-Agent-Tutorial/.agents/skills/prithvi-workshop-care/references/contexts/: compute_and_storage.md  earthdata_access.md  event_catalogs.md  hls_catalog_access.md  hls_conventions.md  prithvi_inference_mcp.md  user_confirmations.md
Day 4/Track 1/GeoAI-Agent-Tutorial/.agents/skills/prithvi-workshop-care/references/guardrails/: index.md
Day 4/Track 1/GeoAI-Agent-Tutorial/.agents/skills/prithvi-workshop-care/references/tools/datasets/: index.md  query_active_fires.md  query_crop_landcover.md  query_surface_water.md
Day 4/Track 1/GeoAI-Agent-Tutorial/.agents/skills/prithvi-workshop-care/references/tools/feasibility/: index.md
Day 4/Track 1/GeoAI-Agent-Tutorial/.agents/skills/prithvi-workshop-care/references/tools/geocode/: geocode_location.md  index.md
Day 4/Track 1/GeoAI-Agent-Tutorial/.agents/skills/prithvi-workshop-care/references/tools/hls/: check_hls_availability.md  index.md
Day 4/Track 1/GeoAI-Agent-Tutorial/.agents/skills/prithvi-workshop-care/references/tools/prithvi/: get_prithvi_job_status.md  get_prithvi_results.md  run_prithvi_inference.md
Day 4/Track 1/GeoAI-Agent-Tutorial/.claude/: settings.json
Day 4/Track 1/GeoAI-Agent-Tutorial/.claude/skills/prithvi-workshop-care/references/contexts/: index.md  prithvi_task_capabilities.md
Day 4/Track 1/GeoAI-Agent-Tutorial/.claude/skills/prithvi-workshop-care/references/guardrails/: safety_and_guardrails.md
Day 4/Track 1/GeoAI-Agent-Tutorial/.claude/skills/prithvi-workshop-care/references/tools/: index.md
Day 4/Track 1/GeoAI-Agent-Tutorial/.claude/skills/prithvi-workshop-care/references/tools/prithvi/: index.md
Day 4/Track 1/GeoAI-Agent-Tutorial/.opencode/agent/prithvi-workshop-care/references/: reasoning.md
Day 4/Track 1/GeoAI-Agent-Tutorial/artifacts/Prithvi_WOrkshop_Agent_artifact/: agents.md  output.md
Day 4/Track 1/GeoAI-Agent-Tutorial/artifacts/Prithvi_WOrkshop_Agent_artifact/tools/datasets/: query_fire_history.md
Day 4/Track 1/GeoAI-Agent-Tutorial/artifacts/Prithvi_WOrkshop_Agent_artifact/tools/prithvi/: index.md  run_prithvi_inference.md
Day 4/Track 1/GeoAI-Agent-Tutorial/tests/: test_tools.py
Day 4/Track 1/GeoAI-Agent-Tutorial/tools/: __init__.py
Day 4/Track 1/GeoAI-Agent-Tutorial/tools/datasets/: __init__.py  query_active_fires.py  query_crop_landcover.py  query_fire_history.py  query_surface_water.py
Day 4/Track 1/GeoAI-Agent-Tutorial/tools/geocode/: __init__.py  geocode_location.py
Day 4/Track 1/GeoAI-Agent-Tutorial/tools/hls/: __init__.py  check_hls_availability.py
Day 4/Track 1/GeoAI-Agent-Tutorial/tools/prithvi/: __init__.py  get_prithvi_job_status.py  get_prithvi_results.py  run_prithvi_inference.py
(+123 files in other folders)
