[project]
name = "geoai-agent-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "earthaccess>=0.12.0",
    "gradio>=6.14.0",
    "pandas>=2.0.0",
    "pydantic-ai>=1.94.0",
    "pydantic-ai-backend>=0.2.6",
    "python-dotenv>=1.0.0",
    "pystac-client>=0.8.0",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "sagemaker>=2.200.0",
]
